--- a/000-default.conf
+++ b/000-default.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
     ServerAdmin oussamabitaa10@gmail.com
     ServerName 34.175.223.8
-    DocumentRoot /root/elgg-app
+    DocumentRoot /var/Elgg
 
-    <Directory /root/elgg-app>
+    <Directory /var/Elgg>
         AllowOverride All
         Require all granted
     </Directory>
