--- a/k8s/elgg-app.yml
+++ b/k8s/elgg-app.yml
@@ -172,7 +172,7 @@ spec:
         #fichiers de configuration
         # command: ["/bin/sh", "-c", "chown -R 33:33 /var/www/html/elgg/elgg-config && chmod -R 775 /var/www/html/elgg/elgg-config"]
         volumeMounts:
-        - mountPath: /root/elgg_data
+        - mountPath: /var/elgg_data
           name: elgg-data
 
         # - mountPath: /var/www/html/elgg/elgg-config
@@ -198,7 +198,7 @@ spec:
             cpu: "800m"
             memory: "700Mi"
         volumeMounts:
-        - mountPath: /root/elgg_data
+        - mountPath: /var/elgg_data
           name: elgg-data
 
         # - mountPath: /var/www/html/elgg/elgg-config
