update Dockerfile and apache config

--- a/000-default.conf
+++ b/000-default.conf
@@ -1,13 +1,14 @@
 <VirtualHost *:80>
     ServerAdmin oussamabitaa10@gmail.com
-    ServerName 34.175.223.8
-    DocumentRoot /var/Elgg
+    ServerName 34.175.206.89
+    DocumentRoot /var/www/elgg
 
-    <Directory /var/Elgg>
+    <Directory /var/www/elgg>
+        Options FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
 
-    ErrorLog ${APACHE_LOG_DIR}/elgg_error.log
-    CustomLog ${APACHE_LOG_DIR}/elgg_access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
