--- a/k8s/elgg-app.yml
+++ b/k8s/elgg-app.yml
@@ -19,12 +19,14 @@ spec:
       initContainers:
       - name: fix-permissions
         image: busybox
-        command: ["/bin/sh", "-c", "chown -R 33:33 /var/elgg_data && chmod -R 775 /var/elgg_data"]
+        command: ["/bin/sh", "-c", "mkdir -p /var/www/elgg/data && chown -R 33:33 /var/elgg_data && chmod -R 775 /var/elgg_data && ln -sfn /var/elgg_data /var/www/elgg/data"]
         #fichiers de configuration
         # command: ["/bin/sh", "-c", "chown -R 33:33 /var/www/html/elgg/elgg-config && chmod -R 775 /var/www/html/elgg/elgg-config"]
         volumeMounts:
         - mountPath: /var/elgg_data
           name: elgg-data
+        - mountPath: /var/www/elgg
+          name: app-code
 
         # - mountPath: /var/www/html/elgg/elgg-config
         #   name: elgg-config-volume
@@ -53,6 +55,8 @@ spec:
         volumeMounts:
         - mountPath: /var/elgg_data
           name: elgg-data
+        - mountPath: /var/www/elgg
+          name: app-code
 
         # - mountPath: /var/www/html/elgg/elgg-config
         #   name: elgg-config-volume
@@ -61,6 +65,8 @@ spec:
       - name: elgg-data
         persistentVolumeClaim:
           claimName: elgg-pvc
+      - name: app-code
+        emptyDir: {}
       # - name: elgg-config-volume
       #   persistentVolumeClaim:
       #     claimName: elgg-config-pvc
